# sius-parse

./: .gitignore  LICENSE  Makefile  README.md  Todo.md  deploy_lambda.ps1  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: c99ba293d23c_auto_migration.py  ec6d53bb35b5_create_shots_model.py  fb7ce39dbe8d_create_athletes_model.py
app/: config.py  main.py
app/api/v1/: login.py
app/crud/: athlete_crud.py  import_crud.py
app/db/models/: __init__.py  athlete_model.py  shots_model.py  user_model.py
app/security/: hash.py  user_auth.py
backend/: Dockerfile  alembic.ini  postman_tests.json  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: athlete.py  import_file.py  login.py  shot.py
backend/app/crud/: import_crud.py  shots_crud.py  user_crud.py
backend/app/db/: db.py
backend/app/db/models/: __init__.py
backend/app/schemas/: athletes.py
backend/app/security/: user_auth.py
frontend/: README.md  index.html  main.ts  tailwind.config.ts  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/components/ui/: button.tsx  interactive-shot-target.tsx  progress.tsx  shot-target.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Admin.tsx  Calendar.tsx  Dashboard.tsx  DayView.tsx  Login.tsx  Profile.tsx  Progress.tsx  Scores.tsx  SetView.tsx  Settings.tsx  Users.tsx
frontend_test/: index.html
