[project]
name = "sius-parse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "sqlmodel>=0.0.24",
]
